# VST_Plugins

./: .gitignore  CLAUDE.md  CMakeLists.txt  DEBUG_GUIDE.md  README.md  build_and_run.sh  checklist.md  create.sh  debug_logs.sh  spec.md
.claude/commands/: 1-juce-research.md  2-juce-specification.md  3-juce-checklist.md  4-juce-build.md
JUCE/DemoRunner.app/Contents/: CodeResources  Info.plist
JUCE/DemoRunner.app/Contents/_CodeSignature/: CodeResources
JUCE/Projucer.app/Contents/: CodeResources  Info.plist
NewPluginSkeleton/: NewPluginSkeleton.jucer
NewPluginSkeleton/Builds/MacOSX/: Info-AU.plist  Info-Standalone_Plugin.plist  Info-VST3.plist  Info-VST3_Manifest_Helper.plist
NewPluginSkeleton/Builds/MacOSX/NewPluginSkeleton.xcodeproj/: project.pbxproj
NewPluginSkeleton/Builds/MacOSX/NewPluginSkeleton.xcodeproj/project.xcworkspace/xcuserdata/lexchristopherson.xcuserdatad/: UserInterfaceState.xcuserstate
NewPluginSkeleton/Builds/MacOSX/NewPluginSkeleton.xcodeproj/xcuserdata/lexchristopherson.xcuserdatad/xcschemes/: xcschememanagement.plist
NewPluginSkeleton/JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
NewPluginSkeleton/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
tests/: build_config_test.cpp  polyphonic_detection_test.cpp  wavetable_synth_test.cpp  windowing_test.cpp  yin_algorithm_test.cpp
